objects/Goods_moving__c.object
<CustomObject>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation</label>
        <referenceTo>Donation__c</referenceTo>
        <relationshipLabel>Goods movings</relationshipLabel>
        <relationshipName>Goods_movings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromStorage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Storage</label>
        <referenceTo>Storage__c</referenceTo>
        <relationshipLabel>Goods movings</relationshipLabel>
        <relationshipName>Goods_movings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToStorage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Storage</label>
        <referenceTo>Storage__c</referenceTo>
        <relationshipLabel>Goods movings (To Storage)</relationshipLabel>
        <relationshipName>Goods_movings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Goods movings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>ToStorage__c</columns>
        <columns>FromStorage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goods movings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods movings</pluralLabel>
    <recordTypes>
        <fullName>Receiving</fullName>
        <active>true</active>
        <label>Receiving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sending</fullName>
        <active>true</active>
        <label>Sending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>